[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-kit"
version = "0.1.0"
description = "File-based, git-friendly, human-readable memory for AI agents. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "agent-memory-kit contributors"}]
keywords = ["ai", "agent", "memory", "llm", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/agBythos/agent-memory-kit"
Issues = "https://github.com/agBythos/agent-memory-kit/issues"

[tool.setuptools.packages.find]
include = ["agent_memory_kit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
